# cube

./: .gitignore  CMakeLists.txt  README.md  rubrick_cube.m.cpp  sample_run.txt  sample_tests_run.txt
cube_core/: CMakeLists.txt  cube.h  face.cpp  face.h
cube_core/unit_tests/: CMakeLists.txt  cube_core_unit_tests.cpp  cube_rotation_unit_tests.cpp  face_unit_tests.cpp
